--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Motivation</string>
     <string name="vamos_comecar">Vamos começar</string>
+    <string name="nova_frase">Nova Frase</string>
+    <string name="frase">Frase</string>
+    <string name="your_name">Qual é o seu nome</string>
+    <string name="qual_o_seu_nome">Qual é o seu nome?</string>
+    <string name="salvar">Salvar</string>
 </resources>
